# devops-miniproj-devgordon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DELIVERABLES.md  DEVGORDON_README.md  Dockerfile  Dockerfile.ollama  FINAL_VALIDATION.md  INDEX.md  Jenkinsfile  PROJECT_SUMMARY.txt  QUICKREF.sh  README.md  README_STARTUP.md  SETUP_COMPLETE.md  SONARQUBE_INTEGRATION.md  TEST_REPORT.md  TEST_RUN_SUMMARY.md  devgordon_showcase.py  docker-ansible-compose.yml  docker-compose.yml  full_test_output.txt  main.py  presentation.md  pyproject.toml  requirements.txt  run_core_tests.sh  run_test_with_groq.sh  setup.sh  sonar-project.properties  sonarqube-deployment.yaml  startup.sh  successfull_showcase.md  successfull_tests.md  test-devgordon-groq.yml  test-devgordon-stages.yml
.github/workflows/: ci.yml
ansible/: deploy.yml  inventory.ini
app/: kube_config_copyover.rb  main.py  mcp_server.py  scanner.py  tools.py
app/static/: index.html
conversations/: e25384c2-eaa4-4526-b1b5-9d7cafd4c867.json
k8s/: deployment.yaml  service.yaml
scripts/: ollama-init.sh  pull-ollama-model.sh
tests/: test_devgordon.py
