[project]
name = "devgordon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "requests==2.34.2",
]
